# MarkerBasedNonoverlappingCalibration

./: CMakeLists.txt  README.md  SynctestT2TbyList_board.cpp  SyntestM2T_boardbyList.cpp  calibrateM2TbyList_board.cpp  calibrateT2TbyList_board.cpp
sample_data/: 68.yml  83.yml  iphone.yml
sample_data/board0/: board.yml
sample_data/board3/: board.yml
sample_data/non_68/: board.yml  support.yaml  target.yaml
sample_data/non_83/: board.yml  support.yaml  target.yaml
sample_data/noncalibration/: T2Tresult.yml  support.yaml
